# storytime

./: .gitignore  docker-compose.yml  main.py  requirements.txt
.github/workflows/: storytime.yaml
backend/: .env.example  .gitignore  advance_story.py  alembic.ini  constants.py  continue_story.py  init_story.py  llm.py  main.py  pyproject.toml  requirements.txt  routes.py  schema.prisma  schemas.py  templates.py  user.py
backend/ai/: story_session.py
backend/db/: abstract.py  crud.py  database.py  local.py  models.py
backend/migrations/20230911165946_init/: migration.sql
backend/parsers/: choices.py  memory.py
backend/routers/: ai.py  db.py
backend/test/: conftest.py  test_prisima.py
backend/test/ai/: test_story_session.py
backend/test/parsers/: test_choices.py  test_memory.py
backend/test/routes/: test_ai.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: create_story.tsx  globals.css  page.tsx
frontend/src/state/: index.ts
storytime/: .env  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
storytime/prisma/: schema.prisma
storytime/prisma/migrations/20230922014936_init/: migration.sql
storytime/src/ai/: cost.ts  llms.ts  session.ts  tokenizer.ts
storytime/src/app/: layout.tsx  page.tsx
storytime/src/data/: characters.ts
storytime/src/parsers/: memory.ts
storytime/src/templates/: base.ts  first_story.ts  memory.ts  relevant_memories.ts
storytime/src/trpc/: server.ts
storytime/src/utils/: get_user.ts  story_to_memory.ts  trpc.ts  trpc_provider.tsx
(+65 files in other folders)
